--- a/iisl-profile/src/pages/Home.css
+++ b/iisl-profile/src/pages/Home.css
@@ -77,7 +77,7 @@
   }
   
   .service-card {
-    background-color: white;
+    background-color: rgb(215, 220, 227);
     padding: 2.5rem;
     border-radius: 0.75rem;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.05);
