aboutus page.edit

--- a/iisl-profile/src/pages/About.css
+++ b/iisl-profile/src/pages/About.css
@@ -48,7 +48,8 @@
   margin-bottom: 20px;
   line-height: 1.8;
   font-size: 1.2em;
-  color: #555;
+  color: #0a0a0a;
+  text-align: justify;
 }
 
 .about-list {
