--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,6 @@
 /* Slider Section */
 .slider-section {
-  margin-top: 40px;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -14,9 +14,9 @@
 .slider {
   position: relative;
   width: 100%;
-  height: 400px; /* Adjust the height to fit the image size */
+  height: 700px; /* Adjust the height to fit the image size */
   overflow: hidden;
-  border-radius: 15px;
+  border-radius: 1px;
 }
 
 .slide {
@@ -39,14 +39,14 @@
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ensures the image covers the container */
-  border-radius: 15px;
+  border-radius: 1px;
 }
 
 /* Hero Section */
 .hero-section {
-  background-color: #00539C;
-  color: white;
-  padding: 100px 20px;
+  background-color: #dae4f7;
+  color: rgb(11, 3, 3);
+  padding: 20px 10px;
   text-align: center;
 }
 
