--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 /* Header Styles */
 .header {
-  background-color: rgb(4, 3, 15);
+  background-color: rgb(20, 5, 53);
   padding: 1rem 2rem;
   color: white;
   position: fixed; /* Ensures the header is fixed */
@@ -31,14 +31,20 @@
   color: #ffdd57; /* Bright yellow on hover */
 }
 
+.logo-image {
+  width: 70px; /* Adjust as needed */
+  height: auto;
+}
+
+
 .menu {
   display: flex;
-  gap: 2rem;
+  gap: 6rem;
 }
 
 .menu a {
-  font-size: 1rem;
-  color: rgb(246, 245, 248);
+  font-size: 1.3rem;
+  color: rgb(249, 248, 251);
   text-decoration: none;
   position: relative;
   transition: color 0.3s ease;
