--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -2,10 +2,13 @@
   font-family: Arial, sans-serif;
   color: #333;
   padding: 20px;
-  max-width: 1200px;
+  max-width: 1450px;
   margin: auto;
+  background-image: url('../pages/bg1.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-
 .banner-section {
   position: relative;
   text-align: center;
@@ -13,7 +16,7 @@
 
 .about-banner {
   width: 100%;
-  height: 300px;
+  height: 250px;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -24,7 +27,7 @@
   left: 50%;
   transform: translateX(-50%);
   color: #fff;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 7, 83, 0.6);
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 2rem;
