--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,16 +1,16 @@
 .about-container {
-  padding: 80px 30px 40px; /* Add more padding on top to lower the section */
+  padding: 80px 30px 40px;
   max-width: 100%;
   margin: 0 auto;
-  background: url('IT1.jpg') no-repeat center center/cover;
-  background-attachment: fixed; /* Ensures the background image stays fixed */
-  height: auto; /* Set to auto to let the content flow naturally */
-  border-radius: 0; /* Remove rounding for full width */
+  background: url('IT5.png') no-repeat center center/cover;
+  background-attachment: fixed;
+  height: auto; 
+  border-radius: 0; 
   box-shadow: none;
   margin-top: 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; /* Align items to the top */
+  justify-content: flex-start; 
   align-items: center;
 }
 .banner-section {
@@ -20,10 +20,10 @@
 
 .about-banner {
   width: 100%;
-  height: 250px; /* Keep the height as is */
+  height: 250px; 
   object-fit: cover;
   border-radius: 10px;
-  margin-top: -50px; /* Pull the banner up */
+  margin-top: -50px; 
 }
 
 .banner-title {
